testsuite/tests/properties/invalid_symbol/test.out
== Valid   - Token node ==
Code generation was successful

== Invalid - Bad type ==
test.py:25: error: Token node expected, but got instead Bool

== Invalid - Non-token node ==
test.py:25: error: Token node expected, but the input FooNode node is not a token node

Done
